# back/central-reserve/internal/infra/primary/http2/handlers/authhandler/request/change-password-request.go
@@ -1,0 +1,7 @@
+package request
+
+// ChangePasswordRequest representa la solicitud para cambiar contraseña
+type ChangePasswordRequest struct {
+	CurrentPassword string `json:"current_password" binding:"required,min=6,max=100"`
+	NewPassword     string `json:"new_password" binding:"required,min=6,max=100"`
+}
