# back/central-reserve/internal/infra/primary/http2/handlers/authhandler/response/change-password-response.go
@@ -1,0 +1,7 @@
+package response
+
+// ChangePasswordResponse representa la respuesta al cambiar contraseña
+type ChangePasswordResponse struct {
+	Success bool   `json:"success"`
+	Message string `json:"message"`
+}
